Fixed a small problem where the title being too long would push the list item buttons.

--- a/src/client/sass/rule-list-item.scss
+++ b/src/client/sass/rule-list-item.scss
@@ -84,6 +84,7 @@
 
   &.rli-parent {
     height: inherit;
+    padding: inherit;
   }
 }
 
